# CS3005301-OOP-Dungeon-Project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Part/Week01/: 工作分配及比例.txt
Part/Week01/Week01_Framework/Week01_FunctionBasics/: main.cpp
Part/Week01/Week01_Framework/Week01_IO/: main.cpp
Part/Week02/Week02_Framework/Week02/: main.cpp
Part/Week03/Week03_Framework/Week03/: main.cpp
Part/Week03_Framework/Week03/: main.cpp
Part/Week04/Upload/ver1/: readme.md
Part/Week04/Upload/ver1/submit/: main.cpp
Part/Week04/Week04_Framework/Week04/: main.cpp
Part/Week05/Upload/ver1/: readme.md  工作分配表.md
Part/Week05/Upload/ver1/submit/: Position.h  main.h
Part/Week05/Week05_Framework/Week05/: Hero.h  Trigger.h  main.cpp
Part/Week06/Upload/ver1/: readme.md
Part/Week06/Upload/ver1/submit/: main.cpp  main.h
Part/Week06/Week06_Framework/Week06/: Hero.h  Position.h  Trigger.h  main.cpp
Part/Week07/Upload/ver1/: readme.md
Part/Week07/Upload/ver1/submit/: Trigger.h
Part/Week07/Week07_Framework/Week07/: Hero.h  Position.h  main.cpp  main.h
Part/Week08/Upload/ver1/: readme.md
Part/Week08/Week08_Framework/Week08/: Hero.h  Position.h  Trigger.h  main.cpp  main.h
Part/Week09/: Quiz09.pptx
Part/Week09/Upload/ver1/: readme.md
Part/Week09/Upload/ver1/submit/: Hero.h  main.cpp
Part/Week09/Week09_Framework/Week09/: Position.h  Trigger.h  main.cpp  main.h
Part/Week10/: Quiz10.pptx
Part/Week10/Week10_Framework/Upload/ver1/: readme.md
Part/Week10/Week10_Framework/Upload/ver1/submit/: Hero.cpp  Hero.h  Trigger.cpp  Trigger.h  main.cpp
Part/Week10/Week10_Framework/Week10/: Position.h  main.cpp  main.h
assets/: app.html
assets/js/: script.js
data/: game.json
document/: Quiz11.pptx  Quiz12.pptx
include/: Config.hpp  Creature.hpp  Exception.hpp  Hero.hpp  Trigger.hpp  main.hpp
include/core/: Animation.hpp  AnimationManager.hpp  Camera.hpp  CreatureManager.hpp  Entity.hpp  EntityManager.hpp  File.hpp  GUIManager.hpp  Game.hpp  GameData.hpp  GameSave.hpp  KeyInput.hpp  Object.hpp  ObjectManager.hpp  ObjectsManager.hpp  Player.hpp  Position.hpp  PositionFloat.hpp  Room.hpp  Utilities.hpp  View.hpp  Weapon.hpp  World.hpp  WorldGenerator.hpp
include/core/block/: Block.hpp  Door.hpp  Ground.hpp  Heal.hpp  TBlock.hpp  Torch.hpp  Wall.hpp
include/core/creature/: Creature.hpp  CreatureB.hpp  CreatureS.hpp
include/core/creature/ai_engine/: AICreatureEngine.hpp
include/core/gui/: GUI.hpp  GameGUI.hpp  PlayerGUI.hpp
include/creature/: CreatureB.hpp  CreatureS.hpp  ICreature.hpp  TCreature.hpp
include/gui/: WebViewUtil.hpp
include/item/: IItem.hpp  Switch.hpp  TItem.hpp  Trigger.hpp
src/: Hero.cpp  Trigger.cpp  main.cpp
src/core/: AnimationManager.cpp  Camera.cpp  CreatureManager.cpp  Entity.cpp  EntityManager.cpp  GUIManager.cpp  Game.cpp  GameData.cpp  GameSave.cpp  KeyInput.cpp  ObjectManager.cpp  ObjectsManager.cpp  Player.cpp  Position.cpp  PositionFloat.cpp  Room.cpp  Test.cpp  Test.hpp  Weapon.cpp  World.cpp  WorldGenerator.cpp
src/core/block/: Block.cpp  Door.cpp  Ground.cpp  Heal.cpp  Torch.cpp  Wall.cpp
src/core/creature/: Creature.cpp  CreatureB.cpp  CreatureS.cpp
src/core/creature/ai_engine/: AICreatureEngine.cpp
src/core/gui/: GameGUI.cpp  PlayerGUI.cpp
src/item/: Switch.cpp  Trigger.cpp
tool/: sync_frontend.py
